2009-01-05  Derek Price  <derek@ximbiot.com>

	* configure.ac: Update version # for post 1.82 development.
	* NEWS: Add section for 1.84 release information.

	* NEWS: Transform a few of Patrice's ChangeLog entries into what are
	hopefully accurate NEWS entries for the 1.82 release.
	* configure.ac: Update version # for 1.82 release.
	* INSTALL, config.guess, config.sub, install-sh, missing,
	mkinstalldirs, mdate-sh, doc/mdate-sh, doc/texinfo.tex: Updated from
	versions in Automake 1.10.

2009-01-05  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: don't duplicate the state for menu entry 
	formatting, use the main state.

2009-01-04  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: add a hook at for the end of special regions 
	processing.

2009-01-04  Derek Price  <derek@ximbiot.com>

	* NEWS: Note more robust tests.

	* test/run_test.sh, test/many_input_files/tex_l2h.sh,
	test/many_input_files/tex_t4ht.sh: Pass a default temporary directory
	to `mktemp'.

2009-01-01  Derek Price  <derek@ximbiot.com>

	* configure.ac: Update version # for post 1.80 development.
	* NEWS: Add section for 1.82 release information.
	* test/encodings/Makefile.am (EXTRA_DIST),
	test/formatting/Makefile.am (EXTRA_DIST): Remove references to
	unversioned files.

	* configure.ac: Update version # for 1.80 release.
	* NEWS: Add date for 1.80 release.

2009-01-01  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init: remove space in front of @quotation argument.
	* texi2html.pl: add a key in duplicated state.
	Return the remaining line after a kept misc command.
	Go through normal_text for empty lines in preformatted.
	Open paragraph after unkown command.
	Call begin_format_texi after closing stuff.

2008-12-24  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: add new hooks for user functions, for simple 
	@-commands, and at the beginning of special regions.
	* T2h_i18n.pm, texi2html.pl, texi2html.init, examples/*: 