@@ -21,6 +21,9 @@
 #    02110-1301  USA
 #
 #-##############################################################################
+
+# FIXME this is out of date. There are still the T2H_ prefixes!
+
 # APA: Add SystemLiteral to identify the canonical DTD.
 # [Definition:] The SystemLiteral is called the entity's system
 # identifier. It is a URI, which may be used to retrieve the entity.
